# codegen

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  config.yaml
.github/workflows/: release.yml
scripts/: build.sh
src/: main.rs  model.rs  mysql_connect.rs  tera_filter.rs  util.rs
templates/default/: controller.tpl  entity.tpl  mapper.tpl  mapperxml.tpl  service.tpl  serviceimpl.tpl  template_config.json
templates/default/dto/: adddto.tpl  listdto.tpl  pagedto.tpl  updatedto.tpl
templates/default/vo/: vo.tpl
