cargo-features = ["edition2021"]

[package]
name = "codegen"
authors = ["godcheese <godcheese@outlook.com>"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "24.0.0"
lazy_static = "1.4.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_yaml = "0.9.21"
serde_json = "1.0.96"
clap = { version = "4.2.4", features = ["derive"] }
tera = "1.19.1"

# For Linux and macOS, we need the vendored ssl
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }
[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10.57", features = ["vendored"] }

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false